--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Drug Design Org - [In Memory of N. Claude Cohen]
+site_name: Drug Design Org
 site_description: Drug Design
 repo_url: https://github.com/drug-design/course
 site_url: https://drugdesign.org
