--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Drug Design Org - [In Memory of N. Claude Cohen]
+site_name: Drug Design Org
 site_description: Drug Design
 repo_url: https://github.com/drug-design/course
 site_url: https://drugdesign.org
@@ -141,9 +141,18 @@ nav:
     - Table of Content: external/toc.md 
     - Erik Lindahl Course: 
       - 'Erik Lindahl': external/erik-lindahl/erik-lindahl.md
-      - 'Molecular Biophysics - 1': external/erik-lindahl/erik-lindahl-1.md
-      - 'Molecular Biophysics - 2': external/erik-lindahl/erik-lindahl-2.md
-      - '.....': external/erik-lindahl/erik-lindahl-2.md
+      - 'Lecture 1': external/erik-lindahl/lecture-1.md
+      - 'Lecture 2': external/erik-lindahl/lecture-2.md
+      - 'Lecture 3': external/erik-lindahl/lecture-3.md
+      - 'Lecture 4': external/erik-lindahl/lecture-4.md
+      - 'Lecture 5': external/erik-lindahl/lecture-5.md
+      - 'Lecture 6': external/erik-lindahl/lecture-6.md            
+      - 'Lecture 7': external/erik-lindahl/lecture-7.md
+      - 'Lecture 8': external/erik-lindahl/lecture-8.md
+      - 'Lecture 9': external/erik-lindahl/lecture-9.md
+      - 'Lecture 10': external/erik-lindahl/lecture-10.md            
+      - 'Lecture 11': external/erik-lindahl/lecture-11.md
+      - 'Lecture 12': external/erik-lindahl/lecture-12.md      
   - New Contributions:
     - 'New contributions': site/new-contributions.md
   - Teaching:
