--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: Drug Design Org
 site_description: Drug Design
 repo_url: https://github.com/drug-design/course
 site_url: https://drugdesign.org
+edit_uri: ./edit/main
 theme:
   icon:
     logo: simple/moleculer
