--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -140,21 +140,21 @@ nav:
       - 'Molecular Dynamics': chapters/molecular-dynamics.md
   - External Courses:
     - Table of Contents: lectures/lectures.md 
-    - Molecular Biophysics Course: 
-      - 'Erik Lindahl': lectures/erik-lindahl/erik-lindahl.md
-      - 'Lecture 1': lectures/erik-lindahl/lecture-1.md
-      - 'Lecture 2': lectures/erik-lindahl/lecture-2.md
-      - 'Lecture 3': lectures/erik-lindahl/lecture-3.md
-      - 'Lecture 4': lectures/erik-lindahl/lecture-4.md
-      - 'Lecture 5': lectures/erik-lindahl/lecture-5.md
-      - 'Lecture 6': lectures/erik-lindahl/lecture-6.md            
-      - 'Lecture 7': lectures/erik-lindahl/lecture-7.md
-      - 'Lecture 8': lectures/erik-lindahl/lecture-8.md
-      - 'Lecture 9': lectures/erik-lindahl/lecture-9.md
-      - 'Lecture 10': lectures/erik-lindahl/lecture-10.md            
-      - 'Lecture 11': lectures/erik-lindahl/lecture-11.md
-      - 'Lecture 12': lectures/erik-lindahl/lecture-12.md  
-      - 'Lecture 13': lectures/erik-lindahl/lecture-13.md 
+    - Erik Lindahl Course: 
+      - 'About': lectures/erik-lindahl/erik-lindahl.md
+      - 'Molecular Biophysics - 1': lectures/erik-lindahl/lecture-1.md
+      - 'Molecular Biophysics - 2': lectures/erik-lindahl/lecture-2.md
+      - 'Molecular Biophysics - 3': lectures/erik-lindahl/lecture-3.md
+      - 'Molecular Biophysics - 4': lectures/erik-lindahl/lecture-4.md
+      - 'Molecular Biophysics - 5': lectures/erik-lindahl/lecture-5.md
+      - 'Molecular Biophysics - 6': lectures/erik-lindahl/lecture-6.md            
+      - 'Molecular Biophysics - 7': lectures/erik-lindahl/lecture-7.md
+      - 'Molecular Biophysics - 8': lectures/erik-lindahl/lecture-8.md
+      - 'Molecular Biophysics - 9': lectures/erik-lindahl/lecture-9.md
+      - 'Molecular Biophysics - 10': lectures/erik-lindahl/lecture-10.md            
+      - 'Molecular Biophysics - 11': lectures/erik-lindahl/lecture-11.md
+      - 'Molecular Biophysics - 12': lectures/erik-lindahl/lecture-12.md  
+      - 'Molecular Biophysics - 13': lectures/erik-lindahl/lecture-13.md 
   - Tutorials: 
     - Table of Contents: tutorials/tutorials.md     
   - New Contributions:
