--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -153,6 +153,7 @@ nav:
     - Erik Lindahl Course: external/erik-lindahl.md
   - External Tutorials (links): 
     - Table of Contents: tutorials/index.md
+    - TeachOpenCADD: tutorials/teachopencadd.md
   - Donate:
     - 'Support us': site/donate.md
 
