--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,8 @@ extra:
 
 extra_css:
   - stylesheets/extra.css
+extra_javascript:
+  - js/course.js
 
 plugins:
   - glightbox:
@@ -53,6 +55,8 @@ plugins:
       prebuild_index: python
 
 markdown_extensions:
+  - pymdownx.tabbed:
+      alternate_style: true
   - pymdownx.critic
   - pymdownx.caret
   - pymdownx.keys
@@ -61,10 +65,12 @@ markdown_extensions:
   - attr_list
   - footnotes
   - admonition
-  - pymdownx.tabbed
   - pymdownx.superfences
   - pymdownx.details
   - pymdownx.snippets
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - abbr
   - toc:
       permalink: true
